--- a/applications/portal/deploy/values.yaml
+++ b/applications/portal/deploy/values.yaml
@@ -39,7 +39,6 @@ harness:
     build:
       - cloudharness-django
     hard:
-      - common
       - events
       - accounts
       - argo
@@ -47,7 +46,6 @@ harness:
       - pgadmin
       - accounts-api
   use_services:
-    - name: common
     - name: accounts-api
   uri_role_mapping:
     - uri: /admin/*
@@ -119,12 +117,14 @@ export_query: "SELECT 'AB_' || ab_id as rrid, ab_name, catalog_num, cat_alt, api
 export_all_fields_query: "WITH applications_subquery AS (SELECT ix, string_agg(api_application.name, ', ') as applications FROM api_antibody LEFT JOIN api_antibodyapplications on api_antibodyapplications.antibody_id = api_antibody.ix LEFT JOIN api_application on api_application.id = api_antibodyapplications.application_id GROUP BY ix) SELECT api_antibody.ix, 'AB_' || ab_id as rrid, ab_name, accession, api_antibody.commercial_type, uid, uid_legacy, catalog_num, catalog_num_search, cat_alt, api_vendor.vendor as vendor_name, api_vendor.vendor || ' Cat# ' || catalog_num || ', RRID:AB_' || ab_id AS proper_citation, url, ab_target, ab_target_entrez_gid, uniprot_id, target_species_raw, target_subregion, target_modification, applications_subquery.applications, epitope, api_specie.name as source_organism, clonality, clone_id, product_isotype, product_conjugate, defining_citation, product_form, comments, kit_contents, feedback, curator_comment, disc_date, status, insert_time, lastedit_time, curate_time, api_antibody.show_link FROM api_antibody LEFT JOIN api_vendor on api_vendor.id = vendor_id LEFT JOIN api_specie on api_specie.id = api_antibody.source_organism_id LEFT JOIN applications_subquery on applications_subquery.ix = api_antibody.ix WHERE true"
 
 sentry:
+  dsn: https://57b1ca8a70634782bd6c90dd119eeab5@o4506739169951744.ingest.sentry.io/4506758817382404
   sample_rate: 1.0
   traces_sample_rate: 0.05
   traces_sample_rate_resources: 0.001
   traces_sample_rate_patterns:
     "/api/": 0.05
     "/admin/": 0.002
+
 scicrunch:
   cronjob:
     schedule: "0 1 * * 6" # for weekend
