AREG-156 make change to theme and update patternfly

--- a/applications/accounts/themes/custom/login/theme.properties
+++ b/applications/accounts/themes/custom/login/theme.properties
@@ -3,7 +3,7 @@ parent=base
 import=common/keycloak
 
 styles=css/login.css css/tile.css
-stylesCommon=web_modules/@patternfly/react-core/dist/styles/base.css web_modules/@patternfly/react-core/dist/styles/app.css node_modules/patternfly/dist/css/patternfly.min.css node_modules/patternfly/dist/css/patternfly-additions.min.css lib/pficon/pficon.css
+stylesCommon=vendor/patternfly-v3/css/patternfly.min.css vendor/patternfly-v3/css/patternfly-additions.min.css
 
 meta=viewport==width=device-width,initial-scale=1
 
