Trigger keycloak update

--- a/applications/accounts/themes/custom/login/theme.properties
+++ b/applications/accounts/themes/custom/login/theme.properties
@@ -21,7 +21,7 @@ kcHeaderClass=login-pf-page-header
 kcFeedbackAreaClass=col-md-12
 kcLocaleClass=col-xs-12 col-sm-1
 
-## Locale
+## Locale:
 kcLocaleMainClass=pf-c-dropdown
 kcLocaleListClass=pf-c-dropdown__menu pf-m-align-right
 kcLocaleItemClass=pf-c-dropdown__menu-item
